# STest

./: CHANGELOG.md  CMakeLists.txt  README.md  build.py  mgen.py
include/: STest.hpp  Test.hpp  core.hpp  runner.hpp
include/interfaces/: STest
src/: STest.cpp
test/: test.cpp
tests/: failAll.cpp  fixtures.cpp  macros.cpp  main.cpp  meta.cpp  passAll.cpp
